--- a/ybk/conf.d/nxscae.yaml
+++ b/ybk/conf.d/nxscae.yaml
@@ -1,6 +1,8 @@
 url: http://www.nxscae.com
 name: 宁夏文化艺术品产权交易中心
 abbr: 宁夏文交所
+notrade: 6
+cashout: 2
 stock:
     index: http://www.nxscae.com/pl/tz/
     relative: http://nxscae.com
