--- a/ybk/conf.d/ybika.yaml
+++ b/ybk/conf.d/ybika.yaml
@@ -1,6 +1,8 @@
 url: http://www.ybika.com
 name: 上海文化产权交易所/内蒙古文化产权交易所
 abbr: 上海文交所
+notrade: 6
+cashout: 3
 stock:
     index: http://www.ybika.com/notice/index_1.htm
     relative: http://www.ybika.com
