--- a/ybk/conf.d/hbcpre.yaml
+++ b/ybk/conf.d/hbcpre.yaml
@@ -1,6 +1,8 @@
 url: http://www.hbcpre.com
 name: 湖北华中文化产权交易所
 abbr: 华中文交所
+notrade: 6
+cashout: 2
 stock:
     index: http://www.hbcpre.com/index.php/index-show-tid-26.html
     relative: http://www.hbcpre.com
