--- a/ybk/conf.d/zghqwh.yaml
+++ b/ybk/conf.d/zghqwh.yaml
@@ -1,6 +1,8 @@
 url: http://www.zghqwh.com
 name: 华强文化艺术品交易中心
 abbr: 华强文交所
+notrade: 6
+cashout: 2
 stock:
     index: http://www.zghqwh.com/web/tggg/
     relative: http://www.zghqwh.com/
