update conf and index page

--- a/ybk/conf.d/cqcaee.yaml
+++ b/ybk/conf.d/cqcaee.yaml
@@ -14,7 +14,7 @@ offer:
 result:
     index: http://www.cqcaee.com/jygg.jhtml
     relative: http://www.cqcaee.com
-    detail: href="([^"]*)"[^>]*>([^<]*发售结果[^<]*).*?\[(\d+-\d+-\d+)\]
+    detail: href="([^"]*)"[^>]*>([^<]*认购确认[^<]*).*?\[(\d+-\d+-\d+)\]
     fields: [url, title, published_at]
     encoding: utf-8
     page: 
