update hxce download link

--- a/ybk/conf.d/hxce.yaml
+++ b/ybk/conf.d/hxce.yaml
@@ -32,7 +32,7 @@ opening:
     guide: http://ybk.hxce.cn/html/tzzn/khlc/2014-12-01/63.html
     bank: [农业银行]
     code: [235010100372E02]
-    download: http://ybk.hxce.cn/upload/haixi_ybk_V5.1.169.1(20150128).exe
+    download: http://ybk.hxce.cn/upload/client.rar
 
 quote:
     realtime:
