--- a/ybk/conf.d/shscce.yaml
+++ b/ybk/conf.d/shscce.yaml
@@ -1,7 +1,7 @@
 url: http://www.shscce.com
 name: 上海邮币卡交易中心
 abbr: 上海邮币卡
-notrade: 6
+notrade: 5, 6
 cashout: 1
 stock:
     index: http://www.shscce.com/html/shscce/zxgg/index_1.shtml
