--- a/ybk/conf.d/zrxtpme.yaml
+++ b/ybk/conf.d/zrxtpme.yaml
@@ -1,38 +1,38 @@
-url: http://www.zrxtjs.com
+url: http://www.zrxtpme.com
 name: 中融文化邮票钱币交易中心
 abbr: 中融邮币卡
 notrade: 6
 cashout: 2
 stock:
-    index: http://www.zrxtjs.com/news/48.html
-    relative: http://www.zrxtjs.com
+    index: http://www.zrxtpme.com/news/58.html
+    relative: http://www.zrxtpme.com
     detail: (\d+/\d+/\d+)</span><a href="([^"]+)">([^<]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
-    page: http://www.zrxtjs.com/news/46-p-{page}.html
+    page: http://www.zrxtpme.com/news/46-p-{page}.html
     maxpage: 1
 offer:
-    index: http://www.zrxtjs.com/news/46.html
-    relative: http://www.zrxtjs.com
+    index: http://www.zrxtpme.com/news/56.html
+    relative: http://www.zrxtpme.com
     detail: (\d+/\d+/\d+)</span><a href="([^"]+)">([^<]*挂牌交易[^<]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
-    page: http://www.zrxtjs.com/news/46-p-{page}.html
+    page: http://www.zrxtpme.com/news/56-p-{page}.html
     maxpage: 1
 result:
-    index: http://www.zrxtjs.com/news/46.html
-    relative: http://www.zrxtjs.com
+    index: http://www.zrxtpme.com/news/56.html
+    relative: http://www.zrxtpme.com
     detail: (\d+/\d+/\d+)</span><a href="([^"]+)">([^<]*中签[^<]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
-    page: http://www.zrxtjs.com/news/46-p-{page}.html
+    page: http://www.zrxtpme.com/news/56-p-{page}.html
     maxpage: 1
 opening: 
-    url: http://www.zrxtjs.com/kaihu.asp
-    guide: http://www.zrxtjs.com/about/66.html
+    url: http://www.zrxtpme.com/kaihu.asp
+    guide: http://www.zrxtpme.com/downs/87.html
     bank: [农业银行]
     code: [""]
-    download: http://www.zrxtjs.com/downs/80.html
+    download: http://www.zrxtpme.com/downs/87.html
 quote:
     realtime:
         url: http://118.145.4.48:16966/tradeweb/hq/getHqV_lbData.jsp
