--- a/ybk/lighttrade/trading.yaml
+++ b/ybk/lighttrade/trading.yaml
@@ -118,3 +118,24 @@
     quote_tcp: tcp://118.145.4.50:10103
     system: sysframe
     tradeweb_url: https://118.145.4.50:10105/tradeweb/httpXmlServlet
+东北商交所:
+    front_url: http://59.44.131.116:16827/common_front/checkneedless/user/logon/logon.action
+    index_url: http://59.44.131.116:16827/common_front/front/frame/index_PC.jsp
+    quote_http: http://59.44.131.115:16894
+    quote_tcp: tcp://59.44.131.115:16896
+    system: sysframe
+    tradeweb_url: http://59.44.131.115:16895/issue_tradeweb/httpXmlServlet
+广州文交所:
+    front_url: http://qbyp.gzcmex.com:16922/common_front/checkneedless/user/logon/logon.action
+    index_url: http://qbyp.gzcmex.com:16922/common_front/front/frame/index_PC.jsp
+    quote_http: http://qbyp.gzcmex.com:16934
+    quote_tcp: tcp://qbyp.gzcmex.com:16933
+    system: sysframe
+    tradeweb_url: http://qbyp.gzcmex.com:16935/issue_tradeweb/httpXmlServlet
+黄金屋:
+    front_url: http://58.19.228.224:16922/common_front/checkneedless/user/logon/logon.action
+    index_url: http://58.19.228.224:16922/common_front/front/frame/index_PC.jsp
+    quote_http: http://58.19.228.223:16923
+    quote_tcp: tcp://58.19.228.223:16924
+    system: sysframe
+    tradeweb_url: http://58.19.228.223:16925/issue_tradeweb/httpXmlServlet
