--- a/ybk/conf.d/jscaee.yaml
+++ b/ybk/conf.d/jscaee.yaml
@@ -4,28 +4,28 @@ abbr: 江苏文交所
 notrade: 6
 cashout: 2
 stock:
-    index: http://ybk.jscaee.com.cn/announcement/trusteeship/
+    index: http://ybk.jscaee.com.cn/statics/tuoguangonggao/
     relative: http://ybk.jscaee.com.cn
-    detail: (/announcement/trusteeship/(\d+-\d+/\d+)/\w+.html)"?>([^>]+)</a>
-    fields: [url, published_at, title]
+    detail: <a[^>]*href="([^"]+)"[^>]*>([^<]*(征集|托管|入库)[^<]*)</a></div>\s*<div[^>]*>(\d+-\d+-\d+)
+    fields: [url, title, _, published_at] 
     encoding: utf-8
-    page: http://ybk.jscaee.com.cn/announcement/trusteeship/index_p{page}.html
+    page: 
     maxpage: 1
 offer:
-    index: http://ybk.jscaee.com.cn/announcement/listing/
+    index: http://ybk.jscaee.com.cn/statics/shangshigonggao/
     relative: http://ybk.jscaee.com.cn
-    detail: (/announcement/listing/(\d+-\d+/\d+)/\w+.html)"?>([^>]+挂牌[^>]+)</a>
-    fields: [url, published_at, title]
+    detail: <a[^>]*href="([^"]+)"[^>]*>([^<]*(挂牌交易|申购)[^<]*)</a></div>\s*<div[^>]*>(\d+-\d+-\d+)
+    fields: [url, title, _, published_at] 
     encoding: utf-8
-    page: http://ybk.jscaee.com.cn/announcement/listing/index_p{page}.html
+    page: 
     maxpage: 1
-result:
-    index: http://ybk.jscaee.com.cn/announcement/lottery-winnings/
+result: 
+    index: http://ybk.jscaee.com.cn/statics/zhongqiangonggao/ 
     relative: http://ybk.jscaee.com.cn
-    detail: (/announcement/lottery-winnings/(\d+-\d+/\d+)/\w+.html)"?>([^>]+)</a>
-    fields: [url, published_at, title]
+    detail: <a[^>]*href="([^"]+)"[^>]*>([^<]*(中签)[^<]*)</a></div>\s*<div[^>]*>(\d+-\d+-\d+)
+    fields: [url, title, _, published_at] 
     encoding: utf-8
-    page: http://ybk.jscaee.com.cn/announcement/lottery-winnings/index_p{page}.html
+    page: 
     maxpage: 1
 opening:
     url: http://180.96.20.223/mnginfo/investor/personApply.jsp
