--- a/ybk/conf.d/shscae.yaml
+++ b/ybk/conf.d/shscae.yaml
@@ -37,7 +37,7 @@ result:
 opening:
     url: http://www.shscae.com//register_online.html
     guide: http://www.shscae.com//open_account_flow.html
-    bank: [建设银行]
+    bank: [平安银行]
     code: [-]
     name: [-]
     download: http://www.shscae.com//software_download/
