--- a/ybk/conf.d/zgqbyp.yaml
+++ b/ybk/conf.d/zgqbyp.yaml
@@ -4,17 +4,21 @@ abbr: 南京文交所
 notrade: 6
 cashout: 2
 stock:
-    index: http://www.zgqbyp.com/web/news/109.html
+    index: 
+        - http://www.zgqbyp.com/web/news/109.html
+        - http://www.zgqbyp.com/web/news/10.html
     relative: http://www.zgqbyp.com/
-    detail: <span>(\d+-\d+-\d+)</span><a href[^>]+(html/\d+-\d+/\d+.html)[^>]*>([^>]+)</a>
+    detail: <span>(\d+-\d+-\d+)</span><a href[^>]+(html/\d+-\d+/\d+.html)[^>]*>([^>]*(?:征集|托管|入库)[^>]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
     page: http://www.zgqbyp.com/web/news/108_{page}.html
     maxpage: 20
 offer:
-    index: http://www.zgqbyp.com/web/news/108.html
+    index: 
+        - http://www.zgqbyp.com/web/news/108.html
+        - http://www.zgqbyp.com/web/news/10.html
     relative: http://www.zgqbyp.com/
-    detail: <span>(\d+-\d+-\d+)</span><a href[^>]+(html/\d+-\d+/\d+.html)[^>]*>([^>]+)</a>
+    detail: <span>(\d+-\d+-\d+)</span><a href[^>]+(html/\d+-\d+/\d+.html)[^>]*>([^>]*(?:挂牌交易|申购公告)[^>]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
     page: http://www.zgqbyp.com/web/news/108_{page}.html
@@ -22,7 +26,7 @@ offer:
 result:
     index: http://www.zgqbyp.com/web/news/10.html 
     relative: http://www.zgqbyp.com/
-    detail: <span>(\d+-\d+-\d+)</span><a href[^>]+(html/\d+-\d+/\d+.html)[^>]*>([^>]*中签[^>]*)</a>
+    detail: <span>(\d+-\d+-\d+)</span><a href[^>]+(html/\d+-\d+/\d+.html)[^>]*>([^>]*(?:中签)[^>]*)</a>
     fields: [published_at, url, title]
     encoding: gb2312
     page: http://www.zgqbyp.com/web/news/10_{page}.html
