--- a/ybk/conf.d/xjsybk.yaml
+++ b/ybk/conf.d/xjsybk.yaml
@@ -4,28 +4,30 @@ abbr: 西部文交所
 notrade: 6
 cashout: 2
 stock:
-    index: http://www.xjsybk.com/xinxipilu/
+    index: 
+        - http://www.xjsybk.com/news!list.action?code=46
+        - http://www.xjsybk.com/news!list.action?code=47
     relative: http://www.xjsybk.com
-    detail: <a href="([^"]+)"[^>]*>([^>]*托管[^>]*)</a><span>(\d+-\d+-\d+)
-    fields: [url, title, published_at]
+    detail: (\d+-\d+-\d+)</span>\s*<a href="([^"]+)"[^>]*>([^>]*(托管|入库|征集)[^>]*)</a>
+    fields: [published_at, url, title, _]
     encoding: utf-8
-    page: http://www.xjsybk.com/xinxipilu/
+    page: 
     maxpage: 1
 offer:
-    index: http://www.xjsybk.com/xinxipilu/
+    index: http://www.xjsybk.com/news!list.action?code=20
     relative: http://www.xjsybk.com
-    detail: <a href="([^"]+)"[^>]*>([^>]*申购[^>]*)</a><span>(\d+-\d+-\d+)
-    fields: [url, title, published_at]
+    detail: (\d+-\d+-\d+)</span>\s*<a href="([^"]+)"[^>]*>([^>]*(申购公告|挂牌交易)[^>]*)</a>
+    fields: [published_at, url, title, _]
     encoding: utf-8
-    page: http://www.xjsybk.com/xinxipilu/
+    page: 
     maxpage: 1
 result:
-    index: http://www.xjsybk.com/xinxipilu/
+    index: http://www.xjsybk.com/news!list.action?code=20
     relative: http://www.xjsybk.com
-    detail: <a href="([^"]+)"[^>]*>([^>]*中签[^>]*)</a><span>(\d+-\d+-\d+)
-    fields: [url, title, published_at]
+    detail: (\d+-\d+-\d+)</span>\s*<a href="([^"]+)"[^>]*>([^>]*(中签)[^>]*)</a>
+    fields: [published_at, url, title, _]
     encoding: utf-8
-    page: http://www.xjsybk.com/xinxipilu/
+    page: 
     maxpage: 1
 opening:
     url: https://118.145.4.50:10006/common_front/checkneedless/firmapply/registerforwardAuto.action?brokerNo=518000
