complete 华东林业所 all settings

--- a/ybk/conf.d/hdlqjy.yaml
+++ b/ybk/conf.d/hdlqjy.yaml
@@ -31,8 +31,8 @@ opening:
     download: http://sc.hdlqjy.com/top/xzzx/jyrj.shtml
 quote:
     realtime:
-        url: 
-        type: getHqV_lbData
+        url: http://sc.hdlqjy.com/req!getsc.action
+        type: req!getsc.action
     history:
-        url:  
+        url: http://115.236.77.220:16714 
         type: sysframe
